Updated to ClassGraph 4.0.4 with the new API